Agregando para 3er entrega

--- a/.hintrc
+++ b/.hintrc
@@ -11,6 +11,12 @@
         "duplicate-id-aria": "off",
         "duplicate-id-active": "off"
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   }
 }
